@@ -51,17 +51,6 @@
             <field name="symbol">$</field>
             <field name="rounding" eval="Decimal('0.01')"/>
             <field name="digits" eval="2"/>
-            <field name="p_cs_precedes" eval="True"/>
-            <field name="n_cs_precedes" eval="True"/>
-            <field name="p_sep_by_space" eval="True"/>
-            <field name="n_sep_by_space" eval="True"/>
-            <field name="mon_grouping">[3, 3, 0]</field>
-            <field name="mon_decimal_point">,</field>
-            <field name="mon_thousands_sep">.</field>
-            <field name="p_sign_posn" eval="1"/>
-            <field name="n_sign_posn" eval="1"/>
-            <field name="negative_sign">-</field>
-            <field name="positive_sign"></field>
         </record>
 
         <record model="currency.currency" id="aud">
@@ -211,17 +200,6 @@
             <field name="symbol">CHF</field>
             <field name="rounding" eval="Decimal('0.01')"/>
             <field name="digits" eval="2"/>
-            <field name="p_cs_precedes" eval="False"/>
-            <field name="n_cs_precedes" eval="False"/>
-            <field name="p_sep_by_space" eval="True"/>
-            <field name="n_sep_by_space" eval="True"/>
-            <field name="mon_grouping">[3, 3, 0]</field>
-            <field name="mon_decimal_point">,</field>
-            <field name="mon_thousands_sep"> </field>
-            <field name="p_sign_posn" eval="1"/>
-            <field name="n_sign_posn" eval="1"/>
-            <field name="negative_sign">-</field>
-            <field name="positive_sign"></field>
         </record>
 
         <record model="currency.currency" id="clp">
@@ -336,17 +314,6 @@
             <field name="symbol">€</field>
             <field name="rounding" eval="Decimal('0.01')"/>
             <field name="digits" eval="2"/>
-            <field name="p_cs_precedes" eval="False"/>
-            <field name="n_cs_precedes" eval="False"/>
-            <field name="p_sep_by_space" eval="True"/>
-            <field name="n_sep_by_space" eval="True"/>
-            <field name="mon_grouping">[3, 3, 0]</field>
-            <field name="mon_decimal_point">,</field>
-            <field name="mon_thousands_sep"> </field>
-            <field name="p_sign_posn" eval="1"/>
-            <field name="n_sign_posn" eval="1"/>
-            <field name="negative_sign">-</field>
-            <field name="positive_sign"></field>
         </record>
 
         <record model="currency.currency" id="fjd">
@@ -370,17 +337,6 @@
             <field name="symbol">£</field>
             <field name="rounding" eval="Decimal('0.01')"/>
             <field name="digits" eval="2"/>
-            <field name="p_cs_precedes" eval="True"/>
-            <field name="n_cs_precedes" eval="True"/>
-            <field name="p_sep_by_space" eval="False"/>
-            <field name="n_sep_by_space" eval="False"/>
-            <field name="mon_grouping">[]</field>
-            <field name="mon_decimal_point">.</field>
-            <field name="mon_thousands_sep">,</field>
-            <field name="p_sign_posn" eval="1"/>
-            <field name="n_sign_posn" eval="1"/>
-            <field name="negative_sign">-</field>
-            <field name="positive_sign"></field>
         </record>
 
         <record model="currency.currency" id="gel">
@@ -1055,17 +1011,6 @@
             <field name="symbol">$</field>
             <field name="rounding" eval="Decimal('0.01')"/>
             <field name="digits" eval="2"/>
-            <field name="p_cs_precedes" eval="True"/>
-            <field name="n_cs_precedes" eval="True"/>
-            <field name="p_sep_by_space" eval="False"/>
-            <field name="n_sep_by_space" eval="False"/>
-            <field name="mon_grouping">[3, 3, 0]</field>
-            <field name="mon_decimal_point">.</field>
-            <field name="mon_thousands_sep">,</field>
-            <field name="p_sign_posn" eval="1"/>
-            <field name="n_sign_posn" eval="1"/>
-            <field name="negative_sign">-</field>
-            <field name="positive_sign"></field>
         </record>
 
         <record model="currency.currency" id="uyu">
